--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="card">
-    <h5 class="card-header">Shorten your URLs!</h5>
+    <h5 class="card-header">sL!</h5>
     <div class="card-body">
       <h5 class="card-title"> </h5>
 
