--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>     
 
       <div class="input-group mb-3">
-        <button class="btn btn-primary" type="button" onclick='shorturl()' id="addBtn">Shorten it</button>
+        <button class="btn btn-primary" type="button" onclick='shorturl()' id="addBtn">Create sL</button>
       </div>
 
       <div class="input-group mb-3">
