--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <button class="btn btn-primary" type="button" onclick='shorturl()' id="addBtn">Create sL</button>
       </div>
 
-      <div class="input-group mb-3">
+<!--       <div class="input-group mb-3">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon3">token</span>
         </div>
         <input class="form-control" type="text" value="__PASSWORD__" readonly="true" id="passwordText" aria-describedby="basic-addon3">
-      </div>
+      </div> -->
 
       <div class="input-group mb-3">
         <button class="btn btn-info" type="button" onclick='loadUrlList()' id="loadListBtn">load localStorage</button>
