--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon3">token</span>
         </div>
-        <input hidden class="form-control" type="text" value="__PASSWORD__" readonly="true" id="passwordText" aria-describedby="basic-addon3">
+        <input class="form-control" style="display:none;" type="text" value="__PASSWORD__" readonly="true" id="passwordText" aria-describedby="basic-addon3">
       </div>
 
       <div class="input-group mb-3">
@@ -65,7 +65,7 @@
     </div>
     
     <div class="card-footer">
-      <span> <a href="https://github.com/crazypeace/Url-Shorten-Worker/" target="_self">Fork me on GitHub</a> </span>
+<!--       <span> <a href="https://github.com/crazypeace/Url-Shorten-Worker/" target="_self">Fork me on GitHub</a> </span> -->
     </div>
   </div>
 
