--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon3">token</span>
         </div>
-        <input class="form-control" style="display:none;" type="text" value="__PASSWORD__" readonly="true" id="passwordText" aria-describedby="basic-addon3">
+        <input class="form-control" type="text" value="__PASSWORD__" readonly="true" id="passwordText" aria-describedby="basic-addon3">
       </div>
 
       <div class="input-group mb-3">
